--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <html>
     <head>
         <title>TokyoLolsPortfolio</title>
-        <link href="./resources/css/index.css" type="text/css" rel="stylesheet">
+        <link href="./index.css" type="text/css" rel="stylesheet">
     </head>
     <body>
-        <script src="./resources/javascript/index.js"></script>
+        <script src="./index.js"></script>
         <div class="Header">
             <li><button onclick="HomeButton()"><b>Home</b></button></li>
             <li><button onclick="PortfolioButton()"><b>Portfolio</b></button></li>
@@ -19,7 +19,7 @@
             </h1>
             
             <h3>
-                I am TokyoLols a 16 year old physics engineer who has experience 
+                I am TokyoLols a 16-year-old physics engineer who has experience 
                 in typescript, lua, c++, and rust. 
                
             </h3>
@@ -29,15 +29,15 @@
             <h1 id="title"><center>Portfolio</center></h1>
             <div id="physics_gun">
                 <h3>Physics Gun</h3>
-                <video src="./resources/videos/PhysicsGun.mp4" controls>https://gyazo.com/3273cd2e69127aa58d4f8da5c5dd0ff4</video>
+                <video src="./PhysicsGun.mp4" controls>https://gyazo.com/3273cd2e69127aa58d4f8da5c5dd0ff4</video>
             </div>
             <div id="combat" align="right">
                 <h3>Combat (No Anims)</h3>
-                <video src="./resources/videos/Combat.mp4" controls>https://gyazo.com/3273cd2e69127aa58d4f8da5c5dd0ff4</video>
+                <video src="./Combat.mp4" controls>https://gyazo.com/3273cd2e69127aa58d4f8da5c5dd0ff4</video>
             </div>
             <div id="placement">
                 <h3>Placement</h3>
-                <video src="./resources/videos/Placement.mp4" controls>https://gyazo.com/3273cd2e69127aa58d4f8da5c5dd0ff4</video>
+                <video src="./Placement.mp4" controls>https://gyazo.com/3273cd2e69127aa58d4f8da5c5dd0ff4</video>
             </div>
         </div>
 
